# rtimer

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  librtimer.cmake  rtimer.c  rtimer.h  rtimer_def.h
test/: test.c
tests/: CMakeLists.txt  test.c  tests.cpp
